--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xlsx-writestream",
-  "description": "Streaming XLSX writer. Forked from rubenv/node-xlsx-writer.",
-  "version": "0.4.0",
+  "name": "xlsx-writestream2",
+  "description": "Streaming XLSX writer",
+  "version": "0.4.1",
   "homepage": "https://github.com/STRML/node-xlsx-writestream",
   "author": "STRML (Samuel Reed)",
   "repository": {
@@ -28,18 +28,18 @@
     "preinstall": "grunt build"
   },
   "devDependencies": {
-    "coffee-script": "~1.6.3",
-    "excel": "0.0.60",
-    "grunt": "~0.4.0",
-    "grunt-benchmark": "~0.2.0",
+    "coffee-script": "~1.11.1",
+    "excel": "0.1.7",
+    "grunt": "~1.0.1",
+    "grunt-benchmark": "~1.0.0",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-coffee": "~0.6.0",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-mkdir": "~0.1.0",
-    "grunt-mocha-cli": "~1.0.1",
-    "grunt-release": "~0.3.1",
-    "underscore": "~1.4.4"
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-coffee": "~1.0.0",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-mkdir": "~1.0.0",
+    "grunt-mocha-cli": "~3.0.0",
+    "grunt-release": "~0.14.0",
+    "underscore": "~1.8.3"
   },
   "keywords": [
     "xlsx",
@@ -47,6 +47,6 @@
     "spreadsheet"
   ],
   "dependencies": {
-    "archiver": "0.5.1"
+    "archiver": "1.2.0"
   }
 }
